--- a/benchmark/pom.xml
+++ b/benchmark/pom.xml
@@ -1,25 +1,30 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
     <parent>
+        <artifactId>scalecube-services-parent</artifactId>
         <groupId>io.scalecube</groupId>
-        <artifactId>scalecube-parent</artifactId>
-        <version>1.0.8-SNAPSHOT</version>
+        <version>2.0.12-SNAPSHOT</version>
     </parent>
-    <artifactId>scalecube-benchmark</artifactId>
-    <name>ScaleCube/Benchmark</name>
+
+    <artifactId>scalecube-services-benchmark</artifactId>
+    <name>ScaleCube/scalecube-services-benchmark</name>
 
     <properties>
-        <uberjar.name>scalecube-benchmark</uberjar.name>
-        <jmh.version>1.4.1</jmh.version>
+        <uberjar.name>scalecube-services-benchmark</uberjar.name>
+        <jmh.version>1.21</jmh.version>
     </properties>
 
     <dependencies>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>scalecube-cluster</artifactId>
+            <artifactId>scalecube-services</artifactId>
             <version>${project.version}</version>
         </dependency>
+
         <!-- Other dependencies -->
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
@@ -49,7 +54,8 @@
                         <configuration>
                             <finalName>${uberjar.name}</finalName>
                             <transformers>
-                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>org.openjdk.jmh.Main</mainClass>
                                 </transformer>
                             </transformers>
@@ -73,5 +79,6 @@
             </plugin>
         </plugins>
     </build>
+
 
 </project>
