--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,7 @@
         <module>services-codec</module>
         <module>services-codec-jackson</module>
         <module>services</module>
+        <module>benchmark</module>
     </modules>
 
     <dependencyManagement>
