Renaming benchmark module with using plural

--- a/pom.xml
+++ b/pom.xml
@@ -87,7 +87,7 @@
         <module>services-codec</module>
         <module>services-codec-jackson</module>
         <module>services</module>
-    <module>benchmark</module>
+        <module>benchmarks</module>
     </modules>
 
   <dependencyManagement>
