--- a/pom.xml
+++ b/pom.xml
@@ -80,15 +80,15 @@
     <jsr305.version>3.0.2</jsr305.version>
   </properties>
 
-  <modules>
-    <module>services-api</module>
-    <module>rsocket-transport</module>
-    <module>services-transport</module>
-    <module>services-codec</module>
-    <module>services-codec-jackson</module>
-    <module>services</module>
-    <module>benchmark</module>
-  </modules>
+    <modules>
+        <module>services-api</module>
+        <module>rsocket-transport</module>
+        <module>services-transport</module>
+        <module>services-codec</module>
+        <module>services-codec-jackson</module>
+        <module>services</module>
+        <module>benchmarks</module>
+    </modules>
 
   <dependencyManagement>
     <dependencies>
