--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -23,6 +23,11 @@
             <version>${project.version}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+        </dependency>
+
         <!-- Other dependencies -->
         <dependency>
             <groupId>org.openjdk.jmh</groupId>
