--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -10,6 +10,7 @@
 
     <artifactId>scalecube-services-benchmarks</artifactId>
     <name>ScaleCube/scalecube-services-benchmarks</name>
+    <packaging>jar</packaging>
 
     <properties>
         <uberjar.name>scalecube-services-benchmarks</uberjar.name>
@@ -75,6 +76,30 @@
                                     </excludes>
                                 </filter>
                             </filters>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <configuration>
+                            <archive>
+                                <manifest>
+                                    <mainClass>
+                                        io.scalecube.services.benchmarks.metrics.ServicesBenchmarksRunner
+                                    </mainClass>
+                                </manifest>
+                            </archive>
+                            <descriptorRefs>
+                                <descriptorRef>jar-with-dependencies</descriptorRef>
+                            </descriptorRefs>
                         </configuration>
                     </execution>
                 </executions>
