--- a/pom.xml
+++ b/pom.xml
@@ -68,7 +68,6 @@
         <netty.version>4.1.24.Final</netty.version>
         <slf4j.version>1.7.7</slf4j.version>
         <log4j.version>2.6.2</log4j.version>
-        <junit.version>4.12</junit.version>
         <maven-compiler-plugin.version>3.7.0</maven-compiler-plugin.version>
         <maven-source-plugin.version>3.0.1</maven-source-plugin.version>
         <maven-javadoc-plugin.version>2.10.4</maven-javadoc-plugin.version>
@@ -79,6 +78,7 @@
         <maven-enforcer-plugin.version>3.0.0-M1</maven-enforcer-plugin.version>
         <jsr305.version>3.0.2</jsr305.version>
         <jctools.version>2.1.2</jctools.version>
+        <junit.jupiter.version>5.2.0</junit.jupiter.version>
         <hamcrest-all.version>1.3</hamcrest-all.version>
     </properties>
 
@@ -219,12 +219,6 @@
                 <groupId>com.google.code.findbugs</groupId>
                 <artifactId>jsr305</artifactId>
                 <version>${jsr305.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>junit</groupId>
-                <artifactId>junit</artifactId>
-                <version>${junit.version}</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>io.projectreactor</groupId>
