--- a/rsocket-transport/pom.xml
+++ b/rsocket-transport/pom.xml
@@ -1,12 +1,16 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-services-parent</artifactId>
     <version>2.0.26-SNAPSHOT</version>
   </parent>
+
   <artifactId>rsocket-services-transport</artifactId>
   <name>Scalecube/RSocket-Transport</name>
+  <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
@@ -19,6 +23,7 @@
       <artifactId>scalecube-services-codec</artifactId>
       <version>${project.version}</version>
     </dependency>
+
     <!-- RSocket -->
     <dependency>
       <groupId>io.rsocket</groupId>
@@ -28,6 +33,11 @@
       <groupId>io.rsocket</groupId>
       <artifactId>rsocket-transport-netty</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.projectreactor.ipc</groupId>
+      <artifactId>reactor-netty</artifactId>
+    </dependency>
+
     <!-- Jackson -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
@@ -41,5 +51,11 @@
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-jsr310</artifactId>
     </dependency>
+    <dependency>
+      <groupId>org.junit.jupiter</groupId>
+      <artifactId>junit-jupiter-api</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
+
 </project>
