Updated git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@
 # Report directories
 /reports
 */reports
+*.csv
+*.log
+*.zip
 
 # Mac-specific directory that no other operating system needs.
 .DS_Store
