--- a/pom.xml
+++ b/pom.xml
@@ -379,6 +379,7 @@
       </plugin>
     </plugins>
   </build>
+
   <repositories>
     <repository>
       <snapshots>
@@ -392,9 +393,17 @@
       <snapshots>
         <enabled>false</enabled>
       </snapshots>
-      <id>central</id>
+      <id>bintray</id>
       <name>bintray</name>
       <url>http://jcenter.bintray.com</url>
+    </repository>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <name>central</name>
+      <url>http://repo1.maven.org</url>
     </repository>
   </repositories>
 
