--- a/services-discovery/pom.xml
+++ b/services-discovery/pom.xml
@@ -22,16 +22,19 @@
             <artifactId>scalecube-services-api</artifactId>
             <version>${project.version}</version>
         </dependency>
-
+        
+        <!-- Jackson deps -->
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>scalecube-services-jackson</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-core</artifactId>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>scalecube-services-jackson</artifactId>
-            <version>${project.version}</version>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
         </dependency>
     </dependencies>
 </project>
