--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-parent-pom</artifactId>
-    <version>0.0.9</version>
+    <version>0.0.10</version>
   </parent>
   <packaging>pom</packaging>
 
@@ -53,7 +53,7 @@
     <module>services-codec-jackson</module>
     <module>services</module>
     <module>benchmarks</module>
-    <module>examples</module>
+    <module>services-examples</module>
   </modules>
 
   <dependencyManagement>
