--- a/services-discovery/pom.xml
+++ b/services-discovery/pom.xml
@@ -1,12 +1,14 @@
- <project xmlns="http://maven.apache.org/POM/4.0.0"
-  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-services-parent</artifactId>
     <version>2.1.11-SNAPSHOT</version>
   </parent>
+
   <artifactId>scalecube-services-discovery</artifactId>
   <name>ScaleCube/Discovery</name>
 
@@ -15,7 +17,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>scalecube-cluster</artifactId>
-      <version>${scalecube.version}</version>
+      <version>${scalecube-cluster.version}</version>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
@@ -37,4 +39,5 @@
       <artifactId>jackson-datatype-jsr310</artifactId>
     </dependency>
   </dependencies>
+
 </project>
