--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -31,6 +31,11 @@
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
+      <artifactId>scalecube-services-protostuff</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>${project.groupId}</groupId>
       <artifactId>scalecube-services-discovery</artifactId>
       <version>${project.version}</version>
     </dependency>
