--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   <parent>
     <groupId>io.scalecube</groupId>
     <artifactId>scalecube-parent-pom</artifactId>
-    <version>0.0.10</version>
+    <version>0.0.11-SNAPSHOT</version>
   </parent>
   <packaging>pom</packaging>
 
@@ -42,8 +42,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-  </properties>
+    <checkstyle.skip>true</checkstyle.skip>
 
+  </properties>
   <modules>
     <module>services-api</module>
     <module>rsocket-transport</module>
