Added protostuff data codec

--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,11 @@
         <artifactId>protostuff-collectionschema</artifactId>
         <version>${protostuff.version}</version>
       </dependency>
+      <dependency>
+        <groupId>io.protostuff</groupId>
+        <artifactId>protostuff-runtime</artifactId>
+        <version>${protostuff.version}</version>
+      </dependency>
 
       <!-- Netty -->
       <dependency>
