--- a/services-codec-protostuff/pom.xml
+++ b/services-codec-protostuff/pom.xml
@@ -29,6 +29,10 @@
       <groupId>io.protostuff</groupId>
       <artifactId>protostuff-collectionschema</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.protostuff</groupId>
+      <artifactId>protostuff-runtime</artifactId>
+    </dependency>
   </dependencies>
 
 </project>
