Moved codec to service-api

--- a/services-api/pom.xml
+++ b/services-api/pom.xml
@@ -21,12 +21,22 @@
       <groupId>io.scalecube</groupId>
       <artifactId>scalecube-utils</artifactId>
     </dependency>
+
     <dependency>
       <groupId>io.projectreactor</groupId>
       <artifactId>reactor-core</artifactId>
     </dependency>
 
-    <!-- Test deps -->
+    <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-buffer</artifactId>
+    </dependency>
+
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+    </dependency>
+
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
