--- a/services-codec-jackson/pom.xml
+++ b/services-codec-jackson/pom.xml
@@ -8,16 +8,16 @@
   </parent>
 
   <artifactId>scalecube-services-jackson</artifactId>
-  <name>ScaleCube/services-codec-api</name>
+  <name>ScaleCube/services-codec-jackson</name>
   <packaging>jar</packaging>
 
   <dependencies>
     <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>scalecube-services-codec</artifactId>
+      <groupId>io.scalecube</groupId>
+      <artifactId>scalecube-services-api</artifactId>
       <version>${project.version}</version>
     </dependency>
-    <!-- Jackson deps -->
+
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
