--- a/services-discovery/pom.xml
+++ b/services-discovery/pom.xml
@@ -11,19 +11,18 @@
   <name>ScaleCube/Discovery</name>
 
   <dependencies>
-    <!-- Scalecube deps -->
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>io.scalecube</groupId>
       <artifactId>scalecube-cluster</artifactId>
       <version>${scalecube-cluster.version}</version>
     </dependency>
+
     <dependency>
-      <groupId>${project.groupId}</groupId>
+      <groupId>io.scalecube</groupId>
       <artifactId>scalecube-services-api</artifactId>
       <version>${project.version}</version>
     </dependency>
 
-    <!-- Jackson deps -->
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-core</artifactId>
