first example of remote aeron publisher and subscriber (1:1)

--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <module>services</module>
     <module>benchmarks</module>
     <module>examples</module>
+    <module>aeron-transport</module>
   </modules>
 
   <dependencyManagement>
