--- a/benchmarks/pom.xml
+++ b/benchmarks/pom.xml
@@ -69,6 +69,10 @@
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
       </plugin>
+      <plugin>
+        <groupId>com.spotify</groupId>
+        <artifactId>dockerfile-maven-plugin</artifactId>
+      </plugin>
     </plugins>
   </build>
 
